# syscall_encode

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
benches/: encode.rs
src/: lib.rs
syscall_macros/: Cargo.toml
syscall_macros/src/: lib.rs  syscall.rs
syscall_macros_traits/: Cargo.toml
syscall_macros_traits/src/: abi.rs  api.rs  decoder.rs  encoder.rs  error.rs  lib.rs  old_lib.rs  ptr.rs  table.rs  test.rs
syscall_macros_traits/src/abi/: registers_and_stack.rs
syscall_macros_traits/src/api/: impls.rs
