[package]
name = "syscall_encode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syscall_macros = { path = "syscall_macros" }
syscall_macros_traits = { path = "syscall_macros_traits" }
alloca = "0.3"

[dev-dependencies]
alloca = "0.3"
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.bench]
debug = true

[[bench]]
name = "encode"
harness = false
