[package]
name = "syscall_encode"
description = "Traits and macros to help define a syscall interface for a kernel."
version = "0.1.6"
edition = "2021"
repository = "https://github.com/twizzler-operating-system/syscall_encode/"
homepage = "https://github.com/twizzler-operating-system/syscall_encode/"
license-file = "LICENSE"
readme = "README.md"
authors = ["Daniel Bittman <danielbittman1@gmail.com>"]
categories = ["encoding", "no-std"]
keywords = ["syscall", "abi"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syscall_encode_macros = { path = "syscall_macros", version = "0.1.3" }
syscall_encode_traits = { path = "syscall_macros_traits", version = "0.1.3" }
alloca = { version = "0.3", optional = true }

[dev-dependencies]
alloca = "0.3"
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.bench]
debug = true

[[bench]]
name = "encode"
harness = false

[features]
benchmarking = ["alloca"]
rustc-dep-of-std = [
    "core",
    "compiler_builtins",
    "compiler_builtins/rustc-dep-of-std",
    "syscall_encode_traits/rustc-dep-of-std",
    "syscall_encode_macros/rustc-dep-of-std",
]

[dependencies.compiler_builtins]
optional = true
version = "0.1"

[dependencies.core]
optional = true
package = "rustc-std-workspace-core"
version = "1.0.0"
