[package]
name = "syscall_macros"
version = "0.1.0"
edition = "2021"

[lib]
name = "syscall_macros"
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "*"
syn = { version = "*", features = ["extra-traits", "parsing"] }
proc-macro2 = "*"
syscall_macros_traits = { path = "../syscall_macros_traits" }
