[package]
name = "syscall_encode_macros"
version = "0.1.1"
edition = "2021"
description = "Proc macros for the syscall_encode trait."
repository = "https://github.com/twizzler-operating-system/syscall_encode/"
homepage = "https://github.com/twizzler-operating-system/syscall_encode/"
license = "BSD-3-Clause"
authors = ["Daniel Bittman <danielbittman1@gmail.com>"]

[lib]
name = "syscall_encode_macros"
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "parsing"] }
proc-macro2 = "1.0"
syscall_encode_traits = { path = "../syscall_macros_traits", version = "0.1" }

[features]
rustc-dep-of-std = [
    "syscall_encode_traits/rustc-dep-of-std",
    "core",
    "compiler_builtins",
]

[dependencies.compiler_builtins]
optional = true
version = "0.1"

[dependencies.core]
optional = true
package = "rustc-std-workspace-core"
version = "1.0.0"
