[package]
name = "syscall_encode_macros"
version = "0.1.8"
edition = "2021"
description = "Proc macros for the syscall_encode trait."
repository = "https://github.com/twizzler-operating-system/syscall_encode/"
homepage = "https://github.com/twizzler-operating-system/syscall_encode/"
license = "BSD-3-Clause"
authors = ["Daniel Bittman <danielbittman1@gmail.com>"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "parsing"] }
proc-macro2 = "1.0"

[features]
rustc-dep-of-std = []
