[package]
name = "syscall_encode_traits"
version = "0.1.9"
edition = "2021"
description = "Traits and macros to help define a syscall interface for a kernel."
repository = "https://github.com/twizzler-operating-system/syscall_encode/"
homepage = "https://github.com/twizzler-operating-system/syscall_encode/"
license = "BSD-3-Clause"
authors = ["Daniel Bittman <danielbittman1@gmail.com>"]

[lib]
name = "syscall_encode_traits"
path = "src/lib.rs"

#[dev-dependencies]
#alloca = "0.3"

[features]
rustc-dep-of-std = [
    "core",
    "compiler_builtins",
    "compiler_builtins/rustc-dep-of-std",
]

[dependencies.core]
optional = true
package = "rustc-std-workspace-core"
version = "1.0.0"

[dependencies.compiler_builtins]
optional = true
version = "0.1"
